2013-08-27  Benjamin Poulain  <benjamin@webkit.org>

        Remove DOMSettableTokenList's overload of add() and remove()
        https://bugs.webkit.org/show_bug.cgi?id=120341

        Reviewed by Ryosuke Niwa.

        Little refactoring to make other cleanups easier. Instead of modifying
        SpaceSplitString directly, rely on DOMTokenList ultimately changing
        the value, which in turn updates the tokens.

        * html/DOMSettableTokenList.cpp:
        * html/DOMSettableTokenList.h:
        * html/DOMTokenList.h:

2013-08-27  Xabier Rodriguez Calvar  <calvaris@igalia.com>

        [GTK] Volume slider shows incorrect track when muted
        https://bugs.webkit.org/show_bug.cgi?id=120253

        Reviewed by Philippe Normand.

        When painting the volume bar, consider that it could be muted even
        then volume is different than zero.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::paintMediaVolumeSliderTrack): Asign
        painted volume as 0 when media is muted.

2013-08-26  Sam Weinig  <sam@webkit.org>

        EditorInternalCommand should use Frame& where possible
        https://bugs.webkit.org/show_bug.cgi?id=120340

        Reviewed by Andreas Kling.

        Only isSupportedFromDOM still takes a Frame*, as it still has callers that expect null to work.

        * dom/UserTypingGestureIndicator.cpp:
        * dom/UserTypingGestureIndicator.h:
        * editing/Editor.cpp:
        * editing/EditorCommand.cpp:
        * page/EventHandler.cpp:

2013-08-26  Ryosuke Niwa  <rniwa@webkit.org>

        Elements in a node list of the form element's name getter should not be added to the past names map
        https://bugs.webkit.org/show_bug.cgi?id=120279

        Reviewed by Darin Adler.

        Don't add the element in the named items to the past names map when there are multiple elements.
        This matches IE10's behavior and the specified behavior in HTML5: