@@ -1,3 +1,15 @@
+2013-08-27  Allan Sandfeld Jensen  <allan.jensen@digia.com>
+
+        Assertion while scrolling news.google.com
+        https://bugs.webkit.org/show_bug.cgi?id=115303
+
+        Reviewed by Anders Carlsson.
+
+        Do not relayout when accessing script elements during painting.
+
+        * html/HTMLEmbedElement.cpp:
+        (WebCore::HTMLEmbedElement::renderWidgetForJSBindings):
+
 2013-08-27  Benjamin Poulain  <benjamin@webkit.org>
 
         Remove DOMSettableTokenList's overload of add() and remove()
